# tmac

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: example.ipynb  example.py  report.md
tests/: conftest.py  test_asset.py  test_component.py  test_id.py  test_node.py  test_score.py  test_tag.py
tests/threat_library/: test_capec_62.py
threatmodel/: __init__.py  asset.py  common.py  component.py  control.py  data_flow.py  diagram.py  element.py  mitigation.py  model.py  node.py  otm.py  risk.py  score.py  table_format.py  threat.py  threatmodel.py  trust_boundary.py  util.py
threatmodel/plus/: browser.py
threatmodel/plus_aws/: __init__.py  application_load_balancer.py
threatmodel/threatlib/: __init__.py
tmac/: __init__.py  asset.py  component.py  data_flow.py  diagram.py  element.py  id.py  mitigation.py  model.py  node.py  otm.py  risk.py  table_format.py  tag.py  threat.py  trust_boundary.py  user_story.py
tmac/plus/: __init__.py  browser.py  client_side.py  data_store.py
tmac/plus_aws/: application_load_balancer.py
tmac/templates/: default.tpl
tmac/threat_library/: __init__.py
tmac/threat_library/templates/: user_story_templates.json
tmac/threatlib/: __init__.py
