[tool.poetry]
name = "threatmodel"
version = "0.0.18"
description = "Agile Threat Modeling as Code"
authors = ["hupe1980"]
repository = "https://github.com/hupe1980/threatmodel"
homepage = "https://github.com/hupe1980/threatmodel"
license = "MIT"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
keywords = [
    "agile", 
    "threat-modeling", 
    "cybersecurity", 
    "appsec", 
    "threatbook", 
    "jupyter-notebook", 
    "OpenThreatModel", 
    "otm",
]

[tool.poetry.dependencies]
python = "^3.11"
graphviz = "^0.20.1"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
mypy = "^0.991"
black = "^22.12.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
