[tool.poetry]
name = "tmac"
version = "0.0.3"
description = "Agile Threat Modeling as Code"
authors = ["hupe1980"]
repository = "https://github.com/hupe1980/tmac"
homepage = "https://github.com/hupe1980/tmac"
license = "MIT"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
keywords = [
    "agile",
    "decsecops", 
    "threat-modeling", 
    "cybersecurity", 
    "appsec", 
    "jupyter-notebook", 
    "OpenThreatModel", 
    "otm",
]

[tool.poetry.dependencies]
python = "^3.11"
tabulate = "^0.9.0"
diagrams = "^0.23.1"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.12.0"
jupyter = "^1.0.0"
mypy = "^0.991"
types-tabulate = "^0.9.0.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "IPython",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:"
]
